--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    proverka
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+
+    Добрый день {{ user.first_name }}
+
+{% endblock %}
