--- a/pages/templates/order/order_request.html
+++ b/pages/templates/order/order_request.html
@@ -1,22 +1,13 @@
-{% extends 'base/base.html' %}
+{% extends "base/base.html" %}
+
 {% block content %}
-    <div class="d-flex flex-wrap" style="margin-top: 1%">
+    <h2>Заказы</h2>
+    <ul>
         {% for order in orders %}
-            <div style="margin: 1%">
-                <a href="/order/{{ order.id }}">
-                    <p> Номер: {{ order.id }}</p>
-                </a>
-                <p> Повар: {{ order.cooker.first_name }}</p>
-                <p> Официант: {{ order.waiter.first_name }}</p>
-                <p> Товар: {{ order.name }}</p>
-            
-                <p>Статус:
-                {% if order.status %}
-                    Оплачен
-                {% else %}
-                    Доставлен
-                {% endif %}</p>
-            </div>
+            <li>
+                {{ order.details }} - {{ order.get_status_display }}
+                <a href="{% url 'update_order_status' order.id %}">Изменить статус</a>
+            </li>
         {% endfor %}
-    </div>
+    </ul>
 {% endblock %}
