--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <p>Привет {{ user.first_name }} {{ user.last_name }}</p>
-    <p>Вы как "{{ user_groups_string }}"</p>
+    <p>Вы вошли как "{{ user_groups_string }}"</p>
 {% endblock %}
